# shortener

./: .gitignore  pyproject.toml  readme.md
app/: database.py  main.py  schemas.py  services.py
tests/: test_api.py
